# open-api-example

client_gen/: README.md
client_gen/docs/: City.md  DeviceApi.md  DeviceRegistrationInfo.md  DeviceState.md  EnvironmentApi.md  Forecast.md  ForecastResponse.md  ForecastTemperature.md  HeaterState.md  LightingSummary.md  LightingZone.md  LightingZoneStatus.md  TemperatueZoneStatus.md  TemperatureSummary.md  TemperatureZone.md  WeatherForecast.md  ZWaveApi.md  ZonesApi.md
client_gen/swagger_client/: __init__.py  configuration.py  rest.py
client_gen/swagger_client/api/: __init__.py  device_api.py  environment_api.py  z_wave_api.py  zones_api.py
client_gen/swagger_client/models/: __init__.py  api_response.py  city.py  device_registration_info.py  device_state.py  forecast.py  forecast_response.py  forecast_temperature.py  heater_state.py  lighting_summary.py  lighting_zone.py  lighting_zone_status.py  temperatue_zone_status.py  temperature_summary.py  (+2 more)
client_gen/test/: test_api_response.py  test_city.py  test_device_api.py  test_device_registration_info.py  test_device_state.py  test_environment_api.py  test_forecast.py  test_forecast_response.py  test_forecast_temperature.py  test_heater_state.py  test_lighting_summary.py  test_lighting_zone.py  test_lighting_zone_status.py  test_temperatue_zone_status.py  test_temperature_summary.py  test_temperature_zone.py  test_weather_forecast.py  test_z_wave_api.py  test_zones_api.py
pet_app/: pyproject.toml
pet_app/pet_app/: main.py
pet_app/pet_app/controllers/: pets_controller.py
server_gen/: README.md
(+5 files in other folders)
