[tool.poetry]
name = "pet-app"
version = "0.1.0"
description = ""
authors = ["Sean Collings <seanrcollings@gmail.com>"]
readme = "README.md"
packages = [{include = "pet_app"}]

[tool.poetry.dependencies]
python = "^3.10"
litestar = "^2.0.0a3"
uvicorn = "^0.21.1"
pytest = "^7.3.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
